# kv

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  mise.toml
.github/workflows/: ci.yml  release-api.yml  release-image.yml  release-sdk.yml
crates/bench/: Cargo.toml
crates/bench/docker/: Dockerfile  entrypoint.sh  run.sh
crates/bench/results/: 2026-05-03T22-44-13Z-rocksdb-baseline-singlekey.json  2026-05-03T22-52-18Z-rocksdb-baseline-batch100.json  2026-05-03T23-10-46Z-rocksdb-baseline-batch100.json  2026-05-04T00-28-07Z-log-engine-singlekey.json  2026-05-04T00-37-03Z-log-engine-batch100.json  2026-05-04T00-56-54Z-log-engine-1t-singlekey.json  2026-05-04T01-04-55Z-log-engine-1t-batch100.json  2026-05-04T01-26-25Z-log-engine-8t-batch100-beyond-shard2.json  2026-05-04T03-47-18Z-log-engine-4t-batch100.json  2026-05-04T14-37-53Z-log-engine-4t-fanout-batch100.json  2026-05-05T00-12-48Z-e2e-batch100.json  2026-05-05T00-29-26Z-e2e-batch100.json  2026-05-05T05-18-57Z-e2e-batch100.json  2026-05-05T05-31-12Z-e2e-batch100.json  2026-05-05T19-02-34Z-e2e-batch100.json  2026-05-05T19-10-33Z-e2e-batch100.json
crates/bench/src/: client.rs  driver.rs  keyspace.rs  lib.rs  main.rs  metrics.rs  targets.rs  workload.rs
crates/engine/: ARCHITECTURE.md  Cargo.toml
crates/engine/benches/: engine.rs
crates/engine/src/: cache.rs  error.rs  lib.rs  store.rs  types.rs  value_store.rs  watch.rs
crates/engine/src/log/: ARCHITECTURE.md  config.rs  file.rs  index.rs  mod.rs  reclaim.rs  record.rs  recover.rs
crates/engine/tests/: emfile.rs  writeamp.rs
crates/proto/: Cargo.toml
crates/proto/src/: command.rs  error.rs  lib.rs  response.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  cross_shard.rs  dispatch.rs  handoff.rs  http.rs  lib.rs  main.rs  metrics.rs  resp.rs  routing.rs  tls.rs
crates/server/tests/: cross_shard.rs  handoff_e2e.rs  handoff_rigorous.rs  handoff_smoke.rs  http.rs  resp.rs  tls.rs
crates/server/tests/common/: mod.rs
crates/server/tests/handoff_harness/: mod.rs
openapi/: v1.json
sdk/ts/: README.md  package-lock.json  package.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
sdk/ts/flags/: ARCHITECTURE.md  README.md  package.json  tsdown.config.ts  vitest.config.ts
sdk/ts/flags/src/: adapter.ts  als.ts  errors.ts  eval.ts  flag.ts  flags.ts  hash.ts  index.ts  snapshot.ts  types.ts
sdk/ts/flags/src/__tests__/: adapter.test.ts  e2e-flags-sdk-surface.test.ts  e2e-flags-sdk.test.ts  e2e-openfeature-server.test.ts  e2e-openfeature-web.test.ts  eval.test.ts  express.test.ts  fastify.test.ts  global-setup.ts  harness.ts  hono.test.ts  integration.test.ts  next.test.ts  openfeature-server.test.ts  openfeature-web.test.ts  scope.test.ts  snapshot.test.ts  test-context.ts
sdk/ts/flags/src/middleware/: express.ts  fastify.ts  hono.ts  next-middleware.ts  next.ts
sdk/ts/flags/src/openfeature/: server.ts  shared.ts  web.ts
sdk/ts/kv/: README.md  package.json  tsdown.config.ts  vitest.config.ts
sdk/ts/kv/src/: cache.ts  client.ts  http.ts  index.ts  kv-types.ts  resp.ts  types.ts
sdk/ts/kv/src/__tests__/: cache.test.ts  cas.test.ts  client.test.ts  coalescing.test.ts  global-setup.ts  http.test.ts  lock.test.ts  missing-ops.test.ts  resp-watch.test.ts  resp.test.ts  tls.test.ts  typed-client.test.ts
sdk/ts/kv/src/next/: index.ts
sdk/ts/kv/src/utils/: camelize.ts
sdk/ts/openapi/: v1.json
sdk/ts/rate-limit/: README.md  package.json  tsdown.config.ts  vitest.config.ts
sdk/ts/rate-limit/__tests__/: global-setup.ts  harness.ts  rate-limit.test.ts
sdk/ts/rate-limit/src/: client.ts  errors.ts  index.ts
sdk/ts/rate-limit/src/algorithms/: fixed-window.ts  sliding-window.ts  token-bucket.ts
sdk/ts/rate-limit/src/middleware/: express.ts  fastify.ts  hono.ts  ip.ts  next.ts
sdk/ts/src/: client.ts  errors.ts  http.ts  index.ts  kv-types.ts  resp.ts  types.ts
sdk/ts/src/__tests__/: batch.test.ts  cas.test.ts  client.test.ts  global-setup.ts  harness.ts  http.test.ts  missing-ops.test.ts  new-ops.test.ts  resp-watch.test.ts  resp.test.ts  typed-client.test.ts
sdk/ts/src/next/: index.ts
