[workspace]
resolver = "2"
members = ["crates/bench", "crates/engine", "crates/proto", "crates/server"]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
rust-version = "1.85"

[workspace.dependencies]
beyond-kv-engine = { path = "crates/engine" }
beyond-kv-proto = { path = "crates/proto" }
beyond-resp = { path = "../resp", features = ["monoio"] }

base64 = "0.22"
bytes = "1.11"
crc-fast = "1.10"
futures-channel = "0.3"
futures-util = "0.3"
http = "1.0"
mimalloc = { version = "0.1", features = ["v2"] }
monoio = { version = "0.2", features = ["io-uring"] }
monoio-codec = "0.3"
monoio-http = "0.3"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
