[workspace]
resolver = "2"
members = ["crates/bench", "crates/engine", "crates/proto", "crates/server"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
beyond-kv-engine = { path = "crates/engine" }
beyond-kv-proto = { path = "crates/proto" }
beyond-resp = { version = "0.1.1", features = ["monoio"] }
handoff = { version = "0.1.1", package = "beyond-handoff" }

base64 = "0.22"
bytes = "1.11"
crc-fast = "1.10"
futures-channel = { version = "0.3", features = ["sink"] }
futures-util = { version = "0.3", features = ["sink"] }
http = "1.0"
memchr = "2"
mimalloc = { version = "0.1", features = ["v2"] }
monoio = { version = "0.2", features = ["io-uring", "unlinkat", "renameat", "mkdirat", "sync"] }
monoio-codec = "0.3"
monoio-http = "0.3"
monoio-rustls = "0.4"
prometheus = "0.14"
rustc-hash = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2.0"
tracing = "0.1"
utoipa = { version = "5", features = [] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
