[package]
name = "beyond-kv-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kv-bench"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true

anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hdrhistogram = "7"
humantime = "2"
rand = "0.8"
rand_distr = "0.4"
redis = { version = "0.26", default-features = false, features = ["tokio-comp"] }
tabled = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
