[package]
name = "beyond-kv-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
crc-fast.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
monoio.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
divan = "0.1"
tempfile = "3"

[[bench]]
name = "engine"
harness = false
