[package]
name = "beyond-kv"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "beyond_kv"
path = "src/lib.rs"

[[bin]]
name = "beyond-kv"
path = "src/main.rs"

[dependencies]
base64.workspace = true
beyond-kv-engine.workspace = true
beyond-kv-proto.workspace = true
beyond-resp.workspace = true
handoff.workspace = true

bytes.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
http.workspace = true
mimalloc.workspace = true
monoio.workspace = true
monoio-codec.workspace = true
monoio-http.workspace = true
monoio-rustls.workspace = true
prometheus.workspace = true
rustc-hash.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
num_cpus = "1"
signal-hook = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
base64.workspace = true
libc = "0.2"
rcgen = "0.14"
redis = { version = "0.27", features = ["tcp_nodelay"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ureq = "2"
urlencoding = "2"
